# forest-industry

./: .cursorignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  synthetic-data-snapshot.json
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260331_initial_schema.py
apps/api/src/gp_api/: __init__.py  auth_tokens.py  config.py  dashboard_comparison.py  dashboard_periods.py  dashboard_service.py  deps.py  main.py  password_verify.py  report_series.py  selectable_weeks.py
apps/api/src/gp_api/db/: __init__.py  sync.py
apps/api/src/gp_api/models/: __init__.py  tables.py
apps/api/src/gp_api/routers/: auth.py  dashboard_read.py  outlets_read.py  reports_read.py  submissions.py  weeks.py
apps/api/src/gp_api/schemas/: auth.py  reference.py  submissions.py
apps/api/src/gp_api/seed/: __init__.py  __main__.py  cli.py  data.py  export_snapshot.py  passwords.py  synthetic_series.py
apps/api/tests/: conftest.py  test_dashboard_periods_rolling.py  test_health.py  test_phase2_db.py  test_phase3_auth.py  test_phase4_reference.py  test_phase5_submissions.py  test_phase6_dashboard.py
apps/web/: Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/development docs/: architecture-draft.md  dev-handoff-spec.md  development-phases-v1.md  development-plan-v1.md  runbook.md
docs/product docs/: agent_product.md  backlog-ui-polish-seed-review.md  (+10 more)
scripts/: refresh-dev-seed.ps1  start-dev-ui.ps1  verify-dev-stack.ps1
(+122 files in other folders)
